--- a/package.json
+++ b/package.json
@@ -7,15 +7,21 @@
     "test": "jest"
   },
   "dependencies": {
+    "mobx": "^5.1.0",
+    "mobx-react": "^5.2.8",
     "react": "16.4.1",
     "react-native": "0.56.1",
     "react-navigation": "^2.13.0"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
-    "babel-preset-react-native": "5.0.2",
     "jest": "23.6.0",
-    "react-test-renderer": "16.4.1"
+    "react-test-renderer": "16.4.1",
+    "@babel/core": "7.0.0-beta.47",
+    "@babel/plugin-proposal-decorators": "7.0.0-beta.47",
+    "@babel/plugin-transform-runtime": "7.0.0-beta.47",
+    "@babel/runtime": "7.0.0-beta.47",
+    "babel-preset-react-native": "5.0.2"
   },
   "jest": {
     "preset": "react-native"
