Import react-native-action-button
Add FAB to UserScreen

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -24,4 +24,6 @@ target 'SC_Social_App' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
   
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
 end
