--- a/ios/Podfile
+++ b/ios/Podfile
@@ -26,4 +26,6 @@ target 'SC_Social_App' do
   
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
+  pod 'react-native-fast-image', :path => '../node_modules/react-native-fast-image'
+
 end
