--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "16.4.1",
     "react-native": "0.56.1",
     "react-native-action-button": "^2.8.5",
+    "react-native-fast-image": "^5.0.3",
     "react-native-vector-icons": "^5.0.0",
     "react-navigation": "^2.13.0"
   },
