--- a/ios/Podfile
+++ b/ios/Podfile
@@ -15,6 +15,7 @@ target 'SC_Social_App' do
     'RCTWebSocket', # Needed for debugging
     'RCTAnimation', # Needed for FlatList and animations running on native UI thread
     # Add any other subspecs you want to use in your project
+    'RCTImage',
   ]
   # Explicitly include Yoga if you are using RN >= 0.42.0
   pod 'yoga', :path => '../node_modules/react-native/ReactCommon/yoga'
