--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "jest"
   },
   "dependencies": {
-    "mobx": "^5.1.0",
-    "mobx-react": "^5.2.8",
+    "mobx": "4.3.1",
+    "mobx-react": "5.1.0",
     "react": "16.4.1",
     "react-native": "0.56.1",
     "react-native-action-button": "^2.8.5",
